<resources>
    <string name="app_name">MYue</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="video">视频</string>

    <string name="subitem01">SubItem01</string>
    <string name="subitem02">SubItem02</string>
    <string name="subitem03">SubItem03</string>
    <string name="subitems">SubItems</string>
    <string name="subitem04">SubItem04</string>
    <string name="subitem05">SubItem05</string>
    <string name="subitem06">SubItem06</string>
    <string name="todo">TODO</string>
    <string name="title_activity_online_video">OnlineVideoActivity</string>
    <string name="change_filter">左右滑动切换滤镜哟...</string>
    <string name="confirm_to_editor_video">点击确定分离音频</string>

</resources>
