<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_green"
            android:icon="@mipmap/green"
            android:title="@string/green" />
        <item
            android:id="@+id/item_blue"
            android:icon="@mipmap/blue"
            android:title="@string/blue" />
        <item
            android:id="@+id/item_pink"
            android:icon="@mipmap/pink"
            android:title="@string/pink" />
    </group>

    <item android:title="@string/subitems">
        <menu>
            <item
                android:id="@+id/subitem_01"
                android:icon="@drawable/ic_launcher"
                android:title="@string/subitem01" />
            <item
                android:id="@+id/subitem_02"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/subitem02" />
            <item
                android:id="@+id/subitem_03"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/subitem03" />
        </menu>
    </item>

    <item android:title="@string/subitems">
        <menu>
            <item
                android:id="@+id/subitem_04"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/subitem04" />
            <item
                android:id="@+id/subitem_05"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/subitem05" />
            <item
                android:id="@+id/subitem_06"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/subitem06" />
        </menu>
    </item>
</menu>